[package]
name = "bloom-solo"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
sawtooth-sdk = "0.4"
zmq = "0.9"
protobuf = "2.16"
hex = "0.4"
rand = "0.4"
uuid = "0.5"
ethereum-types = "0.9"
keccak-hash = "0.5"

common-types = { git = "https://github.com/recursive-bloom/common-types", version = "0.1" }
# common-types = { path = "../common-types", version = "0.1" }

rlp = "0.4"

parity-crypto = { version = "0.6", features = ["publickey"] }

clap = { version = "3.0.0-beta.1", features = ["yaml"] }

serde = "1.0.97"
indexmap = { version = "1.0", optional = true }
toml = "0.5.6"
serde_derive = "1.0"
serde_json = "1.0"



